5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1717_2525.log
== TEST (2019-05-17 19:15:43) 
-- CODE:
x = int(input())

d = 0
e = 1
while x>e:
	if x//e == 0:
		print(e)
	e +=1
	print(d,"divisores")
-- OUTPUT:
0 divisores
0 divisores
0 divisores
0 divisores
0 divisores
0 divisores
0 divisores
0 divisores
0 divisores
0 divisores
0 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:25:33) 
-- CODE:
x = int(input())

d = 0
e = 1
while (x//e) != 0:
	print(e)
	e += 1
	d += 1 
print(d," ","divisores" )
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
12   divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:25:57) 
-- CODE:

print(15//3)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:26:01) 
-- CODE:

print(15//2)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:26:04) 
-- CODE:

print(15/2)
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:26:09) 
-- CODE:

print(15%2)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:27:02) 
-- CODE:

print(15/3)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:27:11) 
-- CODE:

print(int(15/3)
-- ERROR:
File "XXXX", line 3
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:27:16) 
-- CODE:

print(int(15/3))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:27:20) 
-- CODE:

print(int(15/2))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:27:36) 
-- CODE:

print(15/)
-- ERROR:
File "XXXX", line 2
    print(15/)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:27:39) 
-- CODE:

print(15/2)
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:27:56) 
-- CODE:

print(round(15/2,2))
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:27:59) 
-- CODE:

print(round(15/2,0))
-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:28:02) 
-- CODE:

print(round(15/2,1))
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:28:14) 
-- CODE:

print(15//2)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
